force-app/main/default/objects/Order__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>Date on which the order expires</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>