force-app/main/default/objects/Order__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <description>Address where the order must be delivered</description>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>