force-app/main/default/objects/Order__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <description>This field is autofill by integration with openweathermap</description>
    <label>Temperature</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>