force-app/main/default/objects/Order__c/fields/WeatherDescription__c.field-meta.xml
<CustomField>
    <fullName>WeatherDescription__c</fullName>
    <description>This field is autofill by integration with openweathermap</description>
    <label>WeatherDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>