force-app/main/default/objects/Order__c/fields/WeatherFillDatetime__c.field-meta.xml
<CustomField>
    <fullName>WeatherFillDatetime__c</fullName>
    <description>Identify the date and time when the weather is calculated using integration</description>
    <label>Weather Fill Datetime</label>
    <type>DateTime</type>
</CustomField>