force-app/main/default/objects/Order__c/validationRules/BlockValuesNegatives.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockValuesNegatives</fullName>
    <active>true</active>
    <description>Avoid having orders with negative values</description>
    <errorConditionFormula>TotalAmount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>TotalAmount__c</errorDisplayField>
    <errorMessage>Negative values ​​are not allowed</errorMessage>
</ValidationRule>